--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             display: flex; /* Flexbox untuk menampilkan gambar berurutan */
             scroll-snap-type: x mandatory; /* Memaksa scroll berhenti pada setiap gambar */
             -webkit-overflow-scrolling: touch; /* Memberikan scroll yang halus di perangkat mobile */
+            margin-top: 2cm; /* Menambahkan jarak 2cm dari elemen di atasnya */
         }
         .image-container img {
             width: 100vw; /* Setiap gambar mengambil 100% lebar layar */
@@ -110,9 +111,9 @@
             <!-- Gambar pertama -->
             <img src="ternate.png" alt="Kota Ternate">
             <!-- Gambar kedua -->
-            <img src="bacan.jpg" alt="Bacan">
+            <img src="bacan.png" alt="Bacan">
             <!-- Gambar ketiga -->
-            <img src="obi.jpg" alt="Obi">
+            <img src="obi.png" alt="Obi">
         </div>
     </div>
 
