--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             <!-- Gambar pertama -->
             <img src="ternate.png" alt="Kota Ternate">
             <!-- Gambar kedua -->
-            <img src="bacan.png" alt="Bacan">
+            <img src="bacan.jpg" alt="Bacan">
             <!-- Gambar ketiga -->
-            <img src="obi.png" alt="Obi">
+            <img src="obi.jpg" alt="Obi">
         </div>
     </div>
 
